unpackaged/main/default/objects/CS_Migration_Settings__c/CS_Migration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Constants and values used for Data Migration purposes</description>
    <label>CS Migration Settings</label>
</CustomObject>