unpackaged/main/default/objects/CS_Migration_Settings__c/fields/Billing_Rule_Standard__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rule_Standard__c</fullName>
    <description>ID for the default Standard Calendar Billing rule to be used for imported Order Lines</description>
    <inlineHelpText>ID for the default Standard Calendar Billing rule to be used for imported Order Lines</inlineHelpText>
    <label>Billing Rule Standard</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>