unpackaged/main/default/objects/CS_Migration_Settings__c/fields/Default_Package_To_Clone__c.field-meta.xml
<CustomField>
    <fullName>Default_Package_To_Clone__c</fullName>
    <description>ID of the Package (Offer) to clone for each imported Line</description>
    <inlineHelpText>ID of the Package (Offer) to clone for each imported Line</inlineHelpText>
    <label>Default Package To Clone</label>
    <length>18</length>
    <type>Text</type>
</CustomField>