unpackaged/main/default/objects/CS_Migration_Settings__c/fields/Non_DFP_Package_To_Clone__c.field-meta.xml
<CustomField>
    <fullName>Non_DFP_Package_To_Clone__c</fullName>
    <description>The package use to clone for non-DFP products (that do not require syncing with Adserver)</description>
    <inlineHelpText>The package use to clone for non-DFP products (that do not require syncing with Adserver)</inlineHelpText>
    <label>Non DFP Package To Clone</label>
    <length>18</length>
    <type>Text</type>
</CustomField>