unpackaged/main/default/objects/CS_Migration_Settings__c/fields/Revenue_Rule__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Rule__c</fullName>
    <description>ID for the default Rev Rec rule to be used for imported Order Lines</description>
    <inlineHelpText>ID for the default Rev Rec rule to be used for imported Order Lines</inlineHelpText>
    <label>Revenue Rule</label>
    <length>18</length>
    <type>Text</type>
</CustomField>